src/test/ui/lifetime-errors/ex2a-push-one-existing-name.stderr
error[E0308]: mismatched types
  --> $DIR/ex2a-push-one-existing-name.rs:16:12
   |
16 |     x.push(y);
   |            ^ lifetime mismatch
   |
   = note: expected type `Ref<'a, _>`
              found type `Ref<'_, _>`
note: the anonymous lifetime #2 defined on the body at 15:51...
  --> $DIR/ex2a-push-one-existing-name.rs:15:52
   |
15 |   fn foo<'a>(x: &mut Vec<Ref<'a, i32>>, y: Ref<i32>) {
   |  ____________________________________________________^
16 | |     x.push(y);
17 | | }
   | |_^
note: ...does not necessarily outlive the lifetime 'a as defined on the body at 15:51
  --> $DIR/ex2a-push-one-existing-name.rs:15:52
   |
15 |   fn foo<'a>(x: &mut Vec<Ref<'a, i32>>, y: Ref<i32>) {
   |  ____________________________________________________^
16 | |     x.push(y);
17 | | }
   | |_^

error: aborting due to previous error

